[package]
name = "isoflux-core"
version = "0.1.0-alpha.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Shared library for the IsoFlux Command-Query Responsibility Segregation (CQRS) and Event Sourcing (ES) framework for Rust"

[dependencies]
chrono = "0.4.38"
getset = "0.1.3"
uuid = { version = "1.11.0", features = ["v4"] }
